# penguins-video-processor

./: .gitignore  Dockerfile  LICENSE  README.md  archiver.py  processor.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: image-build-scan.yml
scripts/: archive_videos.ps1  process_videos.ps1
