[project]
name = "penguins-video-processor"
version = "1.0.0"
description = "Script to run video transcoding pipeline for Penguin Island"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = { file = "LICENSE" }
readme = { file = "README.md" }
requires-python = ">=3.13,<4"
dependencies = [
  "azure-storage-blob==12.28.0",
  "ipython>=9.12.0",
  "python-dotenv==1.2.2",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
]
